--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             </form>
         </div>
         <!-- Pozostała część HTML bez zmian -->
-        <div id="category-view" class="view"><h2>Zarządzaj Kategoriami</h2><div id="category-list-container"></div><div class="form-group"><label for="new-category-name">Nowa kategoria:</label><input type="text" id="new-category-name" placeholder="np. Wiek, Miejsce zamieszkania"></div><button id="add-category-btn" class="btn-block">Dodaj kategorię</button><div style="display: flex; gap: 10px; margin-top: 20px;"><button id="save-categories-btn" class="btn-block">Zapisz i wróć</button><button id="cancel-categories-btn" class="btn-block btn-secondary">Anuluj</button></div></div>
+        <div id="category-view" class="view"><h2>Zarządzaj kategoriami</h2><div id="category-list-container"></div><div class="form-group"><label for="new-category-name">Nowa kategoria:</label><input type="text" id="new-category-name" placeholder="np. Wiek, Miejsce zamieszkania"></div><button id="add-category-btn" class="btn-block">Dodaj kategorię</button><div style="display: flex; gap: 10px; margin-top: 20px;"><button id="save-categories-btn" class="btn-block">Zapisz i wróć</button><button id="cancel-categories-btn" class="btn-block btn-secondary">Anuluj</button></div></div>
         <div id="main-menu-view" class="view"><h1 id="main-menu-title"></h1><button id="go-to-vote-btn" class="btn-block">Oddaj głos</button><button id="go-to-results-btn" class="btn-block">Zobacz wyniki</button><button id="go-to-history-btn" class="btn-block">Historia głosów</button><hr style="margin: 20px 0; border: none; border-top: 1px solid #eee;"><button id="go-to-edit-btn" class="btn-block btn-secondary">Edytuj konfigurację</button><button id="reset-poll-btn" class="btn-block btn-danger">Skonfiguruj nową ankietę (usuwa dane)</button></div>
         <div id="voting-view" class="view"><h2 id="vote-title"></h2><form id="vote-form"><div class="form-group"><label>Wybierz jedną z opcji:</label><div id="vote-options-container"></div></div><div id="vote-groups-container"></div><button type="submit" class="btn-block">Zagłosuj</button><button type="button" id="back-to-main-from-voting" class="btn-block btn-secondary">Wróć do menu</button></form></div>
         <div id="results-view" class="view">
@@ -141,7 +141,7 @@
             <div id="chart-container"></div>
             <button type="button" id="back-to-main-from-results" class="btn-block btn-secondary" style="margin-top:20px;">Wróć do menu</button>
         </div>
-        <div id="history-view" class="view"><h2>Historia Głosów</h2><div id="history-list-container"></div><button type="button" id="back-to-main-from-history" class="btn-block btn-secondary" style="margin-top:20px;">Wróć do menu</button></div>
+        <div id="history-view" class="view"><h2>Historia głosów</h2><div id="history-list-container"></div><button type="button" id="back-to-main-from-history" class="btn-block btn-secondary" style="margin-top:20px;">Wróć do menu</button></div>
     </div>
 
     <script>
